# repo-reconciliation-toolkit

./: .gitattributes  .gitignore  ACCEPTANCE_CRITERIA.md  CHANGELOG.md  CONTRIBUTING.md  DATA_MODEL.md  LICENSE  LIMITATIONS.md  PLAN.md  README.md  SAFETY_MODEL.md  SECURITY.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
docs/: COMPARISON_GUIDE.md  SNAPSHOT_GUIDE.md
fixtures/snapshots/: base.json  right.json
reports/v0.1/: BACKUP_CHECKLIST.md  DEPENDENCY_REPORT.md  DIVERGENCE_REPORT.json  DIVERGENCE_REPORT.md  MIGRATION_PLAN.md  REPO_SNAPSHOT.json  conflicts.jsonl  summary.json
research/results/v0.1/: file_deltas.csv  snapshot_inventory.csv  snapshot_validation.json
schemas/: comparison.schema.json  snapshot.schema.json
scripts/: check-artifacts.py  generate-fixtures.py  generate-schemas.py
src/repo_reconciliation_toolkit/: __init__.py  canonical.py  cli.py  comparison.py  git_inspection.py  models.py  reporting.py  safety.py  scanning.py  snapshot.py  symbols.py  validation.py
tests/: conftest.py  test_comparison.py  test_git_and_snapshot.py  test_models_and_schemas.py  test_reporting_and_cli.py  test_safety.py  test_symbols.py
