[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-reconciliation-toolkit"
version = "0.1.0"
description = "Read-only repository snapshots, divergence analysis, and reconciliation plans"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Elian Chyndale" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "jsonschema>=4.23,<5",
  "pydantic>=2.9,<3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
  "types-jsonschema>=4.23",
]

[project.scripts]
repo-reconcile = "repo_reconciliation_toolkit.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
repo_reconciliation_toolkit = ["py.typed", "schema_data/*.json"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/repo_reconciliation_toolkit"]

